# todify

./: .gitignore  Dockerfile  Dockerfile.base  Makefile  README.md  docker-compose.yaml  example.env  main.py  pip.conf  pyproject.toml  pytest.ini
.github/workflows/: docker-image.yml
app/: __init__.py  logger.py  main.py  setting.py
app/api/: auth.py  chat.py  user.py
app/auth/: depends.py  service.py
app/chat/: _workflow.py  chat_manager.py  depends.py  schemas.py  stock_workflow.py
app/config/: celery.py  setting.py  telegram.py
app/core/: celery_app.py  database.py  datastore.py  deps.py  execption.py  factory.py  security.py  service.py
app/jobs/: stock_daily_job.py  stock_signal_job.py
app/llm/: _llm_api_client.py  llm_factory.py  qwen_client.py  siliconflow_client.py
app/models/: stock.py  tool.py
app/rag/: akshare_functions.py
app/stock/: analysis_service.py  data_service.py  datastore.py  depends.py  indicator_service.py  lhb.py  service.py  signal_service.py  trade_calendar.py
app/strategy/: _strategy.py  backtest.py  base.py  boll_strategy.py  cci_strategy.py  combo_strategy.py  dmi_strategy.py  factory.py  kdj_cross.py  macd_cross.py  rsi_strategy.py  volume_up.py
app/tasks/: stock_indicator_task.py  stock_signal_task.py  stock_tasks.py
app/tools/: datastore.py  depends.py  tool_manager.py
app/user/: datastore.py  depends.py  schemas.py  service.py
app/utils/: data_frame.py  date.py  func.py  indicator.py  list.py  stock.py  telegram.py
lib/: ta_lib-0.5.2-cp313-cp313-win_amd64.whl
test/: conftest.py
test/llm/: test_agent.py  (+3 more)
(+16 files in other folders)
