[tool.poetry]
name = "todify"
version = "0.1.0"
description = ""
authors = ["todify<codly.fun@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
mysqlclient = "^2.2.6"
akshare = "^1.15.42"
langchain-openai = "^0.2.12"
langchain-community = "^0.3.11"
dashscope = "^1.20.14"
matplotlib = "^3.10.0"
celery = "^5.4.0"
langgraph = "^0.2.59"
arrow = "^1.3.0"
chinese-calendar = "^1.10.0"
langchain-qdrant = "^0.2.0"
pydantic-settings = "^2.7.0"
redis = "^5.2.1"
eventlet = "^0.38.2"
gevent = "^24.11.1"
ta-lib = "^0.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
